[project]
name = "qa-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Zammit",email = "victorzammit@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pydantic (>=2.11.6,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
